Fix visibilty icon color: witches town

--- a/app/javascript/styles/witches-town.scss
+++ b/app/javascript/styles/witches-town.scss
@@ -113,7 +113,7 @@ button.icon-button.disabled i.fa-retweet {
     right: 10px;
     top: 20px;
     font: 14px/1 FontAwesome;
-    color: #606984;
+    color: #D5BDD6;
   }
 
   &-unlisted .display-name,
